syntax = "proto3";

option go_package = "github.com/thor-electronics/core/hub";

service HubCluster {
  rpc GetHub(Hub) returns (Hub) {}
  rpc CreateHub(Hub) returns (Hub) {}
  rpc TerminateHub(Hub) returns (Hub) {}
  // rpc GetHub (SelectHub) returns (Hub) {}
  // rpc GetHubs (SelectHubs) return (stream Hubs) {}
  // rpc CreateHub (CreateHubRequest) returns (Hub) {}
  // rpc PauseHub (SelectHub) returns () {} // what about returning nothing?
  // pause / resume / start / run hub?
  // rpc TerminateHub (SelectHub) returns (Empty) {}
  // Get hubs list
  // Get healthcheck
  // Get summary
  // Get profiling and memory stats etc. load.
  // Get management and administration info etc.
}

message Empty {}

message Hub {
  string group_id = 1;
  optional string password = 2;
}

// message CreateHubRequest {
//   string group_id = 1;
//   optional string password = 2;
// }

// message SelectHub {
//   string group_id = 1;
// }

message Hubs {
  repeated Hub hubs = 1;
  optional int32 count = 2;
}
